--- a/index.html
+++ b/index.html
@@ -20,6 +20,16 @@
       href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css"
       rel="stylesheet"
     />
+
+   <script async src="https://www.googletagmanager.com/gtag/js?id=G-GRS0GFGJWS"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-GRS0GFGJWS');
+    </script> 
+
   </head>
   <body>
     <div id="root"></div>
